--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,3 +5,5 @@ spring.datasource.username={JDBC_DATABASE_USERNAME}
 spring.datasource.password={JDBC_DATABASE_PASSWORD}
 
 bacamoney.origin-permitida=https://bacamoney-angular.heroku.com
+
+spring.profiles.active=basic-security
